# venmo-requester

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  ai_chat.md  example_google_sheet.csv  pyproject.toml  test_sheets.py
.github/actions/lint/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/test/: action.yml
.github/changelog_template/: .release_notes.md.j2
.github/changelog_template/.components/: versioned_changes.md.j2
.github/workflows/: ci.yml  pr-title.yml  pull_request.yml  python_badge.yml  release.yml  semantic-pr.yml
.test_coverage/: coverage.json  coverage.lcov  coverage.xml
app/: main.py
app/models/: config.py  payment.py
app/services/: container.py  email_service.py  sheets_service.py  venmo_service.py
app/services/email/: __init__.py  _gmail.py  gmail.py
app/services/payment_requests/: __init__.py  _google_sheets.py  google_sheets.py
app/services/venmo/: __init__.py  _api.py  api.py
docs/: ai_chat.md  readme.md
tests/: conftest.py  test_container.py  test_email_service.py  test_models.py  test_sheets_service.py
tests/services/: test_venmo_service.py
